# CurtainGame

./: .gitignore  Cargo.toml
assets/patterns/: pattern1.pattern.json  pattern2.pattern.json  pattern3.pattern.json
assets/scripts/: pattern1.json.pattern  pattern1alt.json  pattern2.json.pattern
assets/shaders/: bullet_material.wgsl  custom_material.wgsl
profiling/: readme.md
src/: bullet copy.rs  bullet.rs  diagnostics.rs  editor.rs  main copy 2.rs  main copy.rs  main.rs  player.rs  render.rs
src/bullet/: bullet.wgsl  mod.rs  modifiers.rs  pattern.rs  render.rs
src/editor/: code_editor.rs  mod (with graphs).rs  mod.rs
