[package]
name = "simidi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }
bytemuck = "1.13.0"
bevy_mouse_tracking_plugin = "0.5.3"
bevy_egui = "0.19.0"
egui_node_graph = { git = "https://github.com/a-soulspark/egui_node_graph" }
anyhow = "1.0.69"
serde_json = "1.0.93"
fasteval = "0.2.4"
itertools = "0.10.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

[profile.release]
debug = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
