[package]
name = "simidi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }
bevy_egui = "0.19.0"
serde_json = "1.0.93"
fasteval = "0.2.4"
rayon = "1.6.1"

# anyhow = "1.0.69"
# egui_node_graph = { git = "https://github.com/a-soulspark/egui_node_graph" }

# Enable debug symbols in release mode (for Tracy)
[profile.release]
debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
